--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,28 @@
 alembic==1.0.8
+beautifulsoup4==4.7.1
 blinker==1.4
 Click==7.0
 Flask==1.0.2
 Flask-CKEditor==0.4.3
+Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.4.0
 Flask-Moment==0.7.0
-Flask-SQLAlchemy==2.3.2
+Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.0.8
 MarkupSafe==1.1.1
+pbr==3.1.1
+Pillow==6.0.0
 PyJWT==1.7.1
 PyMySQL==0.9.3
 python-dateutil==2.8.0
 python-editor==1.0.4
 six==1.12.0
-SQLAlchemy==1.3.1
+soupsieve==1.9.1
+SQLAlchemy==1.3.3
 Werkzeug==0.15.1
 WTForms==2.2.1
