--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.0.8
+backcall==0.1.0
 beautifulsoup4==4.7.1
 blinker==1.4
 Click==7.0
+colorama==0.4.1
+decorator==4.4.0
 Flask==1.0.2
 Flask-CKEditor==0.4.3
 Flask-DebugToolbar==0.10.1
@@ -9,20 +12,34 @@ Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.4.0
 Flask-Moment==0.7.0
+Flask-Sitemap==0.3.0
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
+ipdb==0.12.2
+ipython==7.7.0
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.15.1
 Jinja2==2.10.1
 Mako==1.0.8
 MarkupSafe==1.1.1
+parso==0.5.1
 pbr==3.1.1
+pickleshare==0.7.5
 Pillow==6.0.0
+prompt-toolkit==2.0.9
+Pygments==2.4.2
 PyJWT==1.7.1
 PyMySQL==0.9.3
 python-dateutil==2.8.0
+python-dotenv==0.10.3
 python-editor==1.0.4
+python-http-client==3.1.0
+sendgrid==6.0.5
 six==1.12.0
 soupsieve==1.9.1
 SQLAlchemy==1.3.3
+traitlets==4.3.2
+wcwidth==0.1.7
 Werkzeug==0.15.1
 WTForms==2.2.1
