--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ alembic==1.0.8
 backcall==0.1.0
 beautifulsoup4==4.7.1
 blinker==1.4
+braintree==3.56.0
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 decorator==4.4.0
@@ -15,6 +18,7 @@ Flask-Moment==0.7.0
 Flask-Sitemap==0.3.0
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
+idna==2.8
 ipdb==0.12.2
 ipython==7.7.0
 ipython-genutils==0.2.0
@@ -35,11 +39,13 @@ python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
 python-http-client==3.1.0
+requests==2.22.0
 sendgrid==6.0.5
 six==1.12.0
 soupsieve==1.9.1
 SQLAlchemy==1.3.3
 traitlets==4.3.2
+urllib3==1.25.3
 wcwidth==0.1.7
 Werkzeug==0.15.1
 WTForms==2.2.1
