--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 alembic==1.0.8
+asn1crypto==0.24.0
+Authlib==0.12.1
 backcall==0.1.0
 beautifulsoup4==4.7.1
 blinker==1.4
 braintree==3.56.0
 certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
+cryptography==2.7
 decorator==4.4.0
 Flask==1.0.2
-Flask-CKEditor==0.4.3
 Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
@@ -27,11 +30,14 @@ jedi==0.15.1
 Jinja2==2.10.1
 Mako==1.0.8
 MarkupSafe==1.1.1
+numpy==1.17.2
+pandas==0.25.1
 parso==0.5.1
 pbr==3.1.1
 pickleshare==0.7.5
-Pillow==6.0.0
+Pillow==6.2.1
 prompt-toolkit==2.0.9
+pycparser==2.19
 Pygments==2.4.2
 PyJWT==1.7.1
 PyMySQL==0.9.3
@@ -39,6 +45,7 @@ python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
 python-http-client==3.1.0
+pytz==2019.2
 requests==2.22.0
 sendgrid==6.0.5
 six==1.12.0
