--- a/requirements.txt
+++ b/requirements.txt
@@ -45,12 +45,14 @@ python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
 python-http-client==3.1.0
+python-slugify==4.0.0
 pytz==2019.2
 requests==2.22.0
 sendgrid==6.0.5
 six==1.12.0
 soupsieve==1.9.1
 SQLAlchemy==1.3.3
+text-unidecode==1.3
 traitlets==4.3.2
 urllib3==1.25.3
 wcwidth==0.1.7
