--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,62 @@
-certifi==2020.4.5.1
+alembic==1.0.8
+asn1crypto==0.24.0
+Authlib==0.12.1
+autopep8==1.5.2
+backcall==0.1.0
+beautifulsoup4==4.7.1
+blinker==1.4
+braintree==3.56.0
+certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
-colorama==0.4.3
-httpie==2.1.0
-idna==2.9
-Pillow==7.1.2
-Pygments==2.6.1
-requests==2.23.0
-urllib3==1.25.9
+Click==7.0
+colorama==0.4.1
+cryptography==2.7
+decorator==4.4.0
+Flask==1.0.2
+Flask-DebugToolbar==0.10.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Migrate==2.4.0
+Flask-Moment==0.7.0
+Flask-Sitemap==0.3.0
+Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
+idna==2.8
+ipdb==0.12.2
+ipython==7.7.0
+ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jedi==0.15.1
+Jinja2==2.10.1
+Mako==1.0.8
+MarkupSafe==1.1.1
+numpy==1.17.2
+pandas==0.25.1
+parso==0.5.1
+pbr==3.1.1
+pickleshare==0.7.5
+Pillow==6.2.1
+prompt-toolkit==2.0.9
+pycodestyle==2.6.0
+pycparser==2.19
+Pygments==2.4.2
+PyJWT==1.7.1
+PyMySQL==0.9.3
+python-dateutil==2.8.0
+python-dotenv==0.10.3
+python-editor==1.0.4
+python-http-client==3.1.0
+python-slugify==4.0.0
+pytz==2019.2
+requests==2.22.0
+sendgrid==6.0.5
+six==1.12.0
+soupsieve==1.9.1
+SQLAlchemy==1.3.3
+text-unidecode==1.3
+traitlets==4.3.2
+urllib3==1.25.3
+wcwidth==0.1.7
+Werkzeug==0.16.0
+WTForms==2.2.1
