--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@ runenv.bat
 uploads
 test.py
 test.html
-static/uploads/
+app/static/uploads/
 logs/
 .env
 migrations
 __pycache__
-static/rental/
+app/static/rental/
