--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,30 @@
-alembic==1.0.8
-asn1crypto==0.24.0
-Authlib==0.12.1
-autopep8==1.5.2
-backcall==0.1.0
-beautifulsoup4==4.7.1
-blinker==1.4
-braintree==3.56.0
-certifi==2019.6.16
-cffi==1.12.3
-chardet==3.0.4
-Click==7.0
-colorama==0.4.1
-cryptography==3.3.1
-decorator==4.4.0
-Flask==1.0.2
-Flask-DebugToolbar==0.10.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.4.0
-Flask-Moment==0.7.0
-Flask-Sitemap==0.3.0
-Flask-SQLAlchemy==2.4.0
-Flask-WTF==0.14.2
-idna==2.8
-ipdb==0.12.2
-ipython==7.7.0
-ipython-genutils==0.2.0
-itsdangerous==1.1.0
-jedi==0.15.1
-Jinja2==2.10.1
-Mako==1.0.8
-MarkupSafe==1.1.1
-numpy==1.17.2
-pandas==0.25.1
-parso==0.5.1
-pbr==3.1.1
-pickleshare==0.7.5
-Pillow==8.0.1
-prompt-toolkit==2.0.9
-pycodestyle==2.6.0
-pycparser==2.19
-Pygments==2.4.2
-PyJWT==1.7.1
-PyMySQL==0.9.3
-python-dateutil==2.8.0
-python-dotenv==0.10.3
-python-editor==1.0.4
-python-http-client==3.1.0
-python-slugify==4.0.0
-pytz==2019.2
-requests==2.22.0
-sendgrid==6.0.5
-six==1.12.0
-soupsieve==1.9.1
-SQLAlchemy==1.3.3
+alembic==1.13.2
+beautifulsoup4==4.12.3
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-Moment==1.0.6
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
+Mako==1.3.5
+MarkupSafe==2.1.5
+packaging==24.1
+pillow==10.4.0
+PyJWT==2.9.0
+PyMySQL==1.1.1
+python-dotenv==1.0.1
+python-http-client==3.3.7
+python-slugify==8.0.4
+sendgrid==6.11.0
+soupsieve==2.6
+SQLAlchemy==2.0.34
+starkbank-ecdsa==2.2.0
 text-unidecode==1.3
-traitlets==4.3.2
-urllib3==1.25.3
-wcwidth==0.1.7
-Werkzeug==0.16.0
-WTForms==2.2.1
+typing_extensions==4.12.2
+Werkzeug==3.0.3
+WTForms==3.1.2
