--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ alembic==1.13.2
 beautifulsoup4==4.12.3
 blinker==1.8.2
 click==8.1.7
+colorama==0.4.6
+dnspython==2.6.1
+email_validator==2.2.0
 Flask==3.0.3
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
@@ -9,6 +12,7 @@ Flask-Moment==1.0.6
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
+idna==3.8
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
